project('all', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++20'],
  license : 'GPL-3.0')

dependency('range-v3', required : true)

ex1_1  = subproject('ex1.1')
ex2_1  = subproject('ex2.1')
ex2_2  = subproject('ex2.2')
ex2_3  = subproject('ex2.3')
ex2_4  = subproject('ex2.4')
ex2_5  = subproject('ex2.5')
ex2_6  = subproject('ex2.6')
ex3_1  = subproject('ex3.1')
ex3_2  = subproject('ex3.2')
ex3_3  = subproject('ex3.3')
ex3_4  = subproject('ex3.4')
ex3_5  = subproject('ex3.5')
ex3_6  = subproject('ex3.6')
ex3_7  = subproject('ex3.7')
ex3_8  = subproject('ex3.8')
ex3_9  = subproject('ex3.9')
ex3_10 = subproject('ex3.10')
ex3_11 = subproject('ex3.11')
ex3_12 = subproject('ex3.12')
ex4_1  = subproject('ex4.1')
ex4_2  = subproject('ex4.2')
ex4_3  = subproject('ex4.3')
ex4_4  = subproject('ex4.4')
ex5_1  = subproject('ex5.1')
ex6_1  = subproject('ex6.1')
ex6_2  = subproject('ex6.2')
ex6_3  = subproject('ex6.3')
ex7_2  = subproject('ex7.2')
ex8_1  = subproject('ex8.1')
ex8_2  = subproject('ex8.2')
ex8_3  = subproject('ex8.3')
ex8_4  = subproject('ex8.4')

alias_target('ex1.1', ex1_1.get_variable('exe'))
alias_target('ex2.1', ex2_1.get_variable('exe'))
alias_target('ex2.2', ex2_2.get_variable('exe'))
alias_target('ex2.3', ex2_3.get_variable('exe'))
alias_target('ex2.4', ex2_4.get_variable('exe'))
alias_target('ex2.5', ex2_5.get_variable('exe'))
alias_target('ex2.6', ex2_6.get_variable('exe'))
alias_target('ex3.1', ex3_1.get_variable('exe'))
alias_target('ex3.2', ex3_2.get_variable('exe'))
alias_target('ex3.3', ex3_3.get_variable('exe'))
alias_target('ex3.4', ex3_4.get_variable('exe'))
alias_target('ex3.5', ex3_5.get_variable('exe'))
alias_target('ex3.6', ex3_6.get_variable('exe'))
alias_target('ex3.7', ex3_7.get_variable('exe'))
alias_target('ex3.8', ex3_8.get_variable('exe'))
alias_target('ex3.9', ex3_9.get_variable('exe'))
alias_target('ex3.10', ex3_10.get_variable('exe'))
alias_target('ex3.11', ex3_11.get_variable('exe'))
alias_target('ex3.12', ex3_12.get_variable('exe'))
alias_target('ex4.1', ex4_1.get_variable('exe'))
alias_target('ex4.2', ex4_2.get_variable('exe'))
alias_target('ex4.3', ex4_3.get_variable('exe'))
alias_target('ex4.4', ex4_4.get_variable('exe'))
alias_target('ex5.1', ex5_1.get_variable('exe'))
alias_target('ex6.1', ex6_1.get_variable('exe'))
alias_target('ex6.2', ex6_2.get_variable('exe'))
alias_target('ex6.3', ex6_3.get_variable('exe'))
alias_target('ex7.2', ex7_2.get_variable('exe'))
alias_target('ex8.1', ex8_1.get_variable('exe'))
alias_target('ex8.2', ex8_2.get_variable('exe'))
alias_target('ex8.3', ex8_3.get_variable('exe'))
alias_target('ex8.4', ex8_4.get_variable('exe'))
